Create new Entities

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -51,6 +51,8 @@ set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -Werror -O2")
 #-----------------------------------------------------------------------------
 add_subdirectory(plugins)
 add_subdirectory(kcm)
+add_subdirectory(entities)
+add_subdirectory(test)
 
 #-----------------------------------------------------------------------------
 #                               BUILD SUMMARY
