--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -12,6 +12,9 @@ find_package(Qt5Test REQUIRED)
 add_executable(testEntities TestEntities.cpp $<TARGET_OBJECTS:entities>)
 target_link_libraries(testEntities Qt5::Test)
 
+add_executable(testGateways TestIptablesRulesComposer.cpp $<TARGET_OBJECTS:entities> $<TARGET_OBJECTS:gateways>)
+target_link_libraries(testGateways Qt5::Test)
+
 #find_package(PkgConfig REQUIRED)
 #
 #pkg_check_modules(mnl libmnl IMPORTED_TARGET)
