--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -53,7 +53,7 @@ set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -Werror -O2")
 add_subdirectory(plugins)
 add_subdirectory(kcm)
 add_subdirectory(entities)
-add_subdirectory(backends)
+add_subdirectory(gateways)
 add_subdirectory(test)
 
 #-----------------------------------------------------------------------------
