Implement simple three steos firewall

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -17,3 +17,7 @@ target_link_libraries(testIptable Qt5::Test)
 
 add_executable(testQVariantRuleSetConverter $<TARGET_OBJECTS:entities> $<TARGET_OBJECTS:gateways> TestQVariantRuleSetConverter.cpp)
 target_link_libraries(testQVariantRuleSetConverter Qt5::Test)
+
+find_package(Qt5Network REQUIRED)
+add_executable(testThreeStepsFirewall $<TARGET_OBJECTS:entities> $<TARGET_OBJECTS:gateways> TestTreeStepsFirewall.cpp)
+target_link_libraries(testThreeStepsFirewall Qt5::Test Qt5::Network)
