--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -21,3 +21,5 @@ target_link_libraries(testQVariantRuleSetConverter Qt5::Test)
 find_package(Qt5Network REQUIRED)
 add_executable(testThreeStepsFirewall $<TARGET_OBJECTS:entities> $<TARGET_OBJECTS:gateways> TestTreeStepsFirewall.cpp)
 target_link_libraries(testThreeStepsFirewall Qt5::Test Qt5::Network)
+
+add_subdirectory(testMFWQmlPlugin)
