--- a/service/CMakeLists.txt
+++ b/service/CMakeLists.txt
@@ -4,8 +4,8 @@ set(CMAKE_INCLUDE_CURRENT_DIR ON)
 
 find_package(Qt5Test REQUIRED)
 
-add_executable(mfw-service main.cpp $<TARGET_OBJECTS:entities> $<TARGET_OBJECTS:gateways>)
-target_link_libraries(mfw-service Qt5::Test)
+add_executable(nomad-service main.cpp $<TARGET_OBJECTS:entities> $<TARGET_OBJECTS:gateways>)
+target_link_libraries(nomad-service Qt5::Test)
 
-install(TARGETS mfw-service RUNTIME DESTINATION bin)
-install(FILES org.maui.mfw.service DESTINATION /etc/systemd/system/)
+install(TARGETS nomad-service RUNTIME DESTINATION bin)
+install(FILES org.nomad.firewall.service DESTINATION /etc/systemd/system/)
